WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133772
WebFrameNetworkContext should not have a sourceApplicationIdentifier in WK1.
https://bugs.webkit.org/show_bug.cgi?id=133772
Summary
WebFrameNetworkContext should not have a sourceApplicationIdentifier in WK1.
Jeremy Jones
Reported
2014-06-11 15:27:28 PDT
WebFrameNetworkContext should not have a sourceApplicationIdentifier in WK1.
Attachments
Patch
(1.50 KB, patch)
2014-06-11 15:29 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-06-11 15:28:04 PDT
radar://16888774
Jeremy Jones
Comment 2
2014-06-11 15:29:48 PDT
Created
attachment 232914
[details]
Patch
WebKit Commit Bot
Comment 3
2014-06-11 17:32:59 PDT
Comment on
attachment 232914
[details]
Patch Clearing flags on attachment: 232914 Committed
r169867
: <
http://trac.webkit.org/changeset/169867
>
WebKit Commit Bot
Comment 4
2014-06-11 17:33:01 PDT
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 5
2014-06-23 15:55:15 PDT
Follow up:
https://bugs.webkit.org/show_bug.cgi?id=134222
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug