WebFrameNetworkContext should not have a sourceApplicationIdentifier in WK1. https://bugs.webkit.org/show_bug.cgi?id=133772

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-06-11
Reviewed by Jer Noble.

Return empty string from sourceApplicationIdentifier for WK1.

* WebCoreSupport/WebFrameNetworkingContext.mm:
(WebFrameNetworkingContext::sourceApplicationIdentifier):

Canonical link: https://commits.webkit.org/151758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169867 268f45cc-cd09-0410-ab3c-d52691b4dbfc